[metadata]
name = uplink-python
version = 1.2.2.0
author = Utropicmedia
author_email = development@utropicmedia.com
license= Apache Software License
description = Bindings for Storj network uplink
long_description= file: README.md,
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
url = https://github.com/storj-thirdparty/uplink-python

[options]
packages = uplink_python
install_requires= wheel
include_package_data=True
python_requires = >=3.7
